fix: touch-action includ on mobile version

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -29,6 +29,8 @@ body
   background-position: center
   background-attachment: fixed
   overscroll-behavior: none
+  touch-action: none
+  overflow-x: hidden
 
 @media (prefers-color-scheme: light)
   :root
@@ -44,6 +46,7 @@ body
     background-image: var(--background-light-image)
     background-attachment: fixed
     overscroll-behavior: none
+    touch-action: none
 
 [data-theme="dark"] 
   --text-color: #fff
